LPS-69854 background no longer scrolls when trying to scroll modal window on smaller media

--- a/modules/apps/foundation/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/application/_modal.scss
+++ b/modules/apps/foundation/frontend-theme/frontend-theme-styled/src/main/resources/META-INF/resources/_styled/css/application/_modal.scss
@@ -35,6 +35,13 @@
 	overflow: hidden;
 }
 
+@media only screen and (max-device-width: 1024px) {
+	.modal-open {
+		overflow: visible !important;
+		position: fixed;
+	}
+}
+
 .portal-popup {
 	.columns-max > .portlet-layout.row {
 		margin-left: 0;
